--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-fastapi==0.68.0
-pydantic==1.8.2
-playwright==1.30.0
+fastapi==0.103.2
+pydantic==2.4.2
+playwright==1.39.0
 agentql==0.1.0
-uvicorn==0.15.0
+uvicorn[standard]==0.23.2
+gunicorn==21.2.0
