--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,6 @@ playwright==1.39.0
 agentql==1.0.1
 uvicorn[standard]==0.23.2
 gunicorn==21.2.0
+python-multipart==0.0.6
+httpx==0.25.0
+asyncio==3.4.3
